--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -4,10 +4,10 @@ ruby:
 #gray-top-banner.row.visible-md-block.visible-lg-block
 
   #customer-service.col-md-4
-    = banner.right_text.try(:html_safe)
+    = banner.right_text.to_s.html_safe
 
   #free-shipping.col-md-4.text-center
-    = banner.center_text.try(:html_safe)
+    = banner.center_text.to_s.html_safe
 
   #account-area.col-md-4.text-right
     = link_to spree_signup_path do
