remove no need file

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -20,7 +20,7 @@ section.container.content-block.home-main-content
         = image_tag 'home-page-tiles/tile-bridesmaid-chic.jpg', alt: 'BRIDESMAID CHIC - Getting it right for your #girlsquad'
 
     aside.col-md-5
-      = render 'shared/redesign/blog_posts'
+      = react_component('BlogPosts')
 
 /! Email Subscription
 = render 'shared/redesign/newsletter_signup'
