Rename the dress menu item again

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -118,7 +118,7 @@ ruby:
         div#dresses-menu
           ul.nav.navbar-nav
             li.normal-item
-              .text.text-back CUSTOM MADE DRESSES
+              .text.text-back DRESSES
               .arrow
                 i.fa.fa-chevron-left
                 .back BACK
@@ -247,7 +247,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#dress-menu-open
-            .text CUSTOM MADE DRESSES
+            .text DRESSES
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#event-menu-open
