--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -97,7 +97,7 @@ ruby:
             p#product-price
               span.price = product_price_with_discount(@product.price, @product.discount)
 
-          - if @product.is_active
+          - if @product.is_active || custom_order?
             = render 'product_selection_options'
           - else
             = render 'inactive_product_selection'
