--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -262,7 +262,8 @@ ruby:
             a.text href='http://blog.fameandpartners.com' MAGAZINE
           - if sale_active?
             li.normal-item
-              = link_to 'SALE', mystyle_landing_page_path(lpi: 'formal', sale: ''), class: 'text'
+              = link_to 'SALE', mystyle_landing_page_path(lpi: 'formal', sale: 'all'), class: 'text'
+
           /li.normal-item
             /.text MADE FOR YOU
           /li.normal-item
