--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -52,7 +52,7 @@ ruby:
   span.new-this-week
     em New this week
   span.dresses
-    = link_to 'DRESSES', dresses_path 
+    = link_to 'DRESSES', dresses_path
   span.nested
     ' EVENTS
     ul
@@ -62,7 +62,7 @@ ruby:
   span.magazine
     a href='http://blog.fameandpartners.com' MAGAZINE
   span.sale
-    = link_to 'SALE', mystyle_landing_page_path(:lpi => 'formal', :sale => 20)
+    = link_to 'SALE', mystyle_landing_page_path(:lpi => 'formal', :sale => 'all')
   /span.made-for-you MADE FOR YOU
   /span.join-us JOIN US
   span.search-wrapper#search
