Diabled 'Pay Now' and 'BuyWithMasterPass' buttons if nothing in cart

--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8115,6 +8115,10 @@ xheader
   }
 }
 
+#cart button#buyWithMasterPass {
+    width: initial;
+}
+
 /* --------------------------------
 
 xgallery
