--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -5,8 +5,8 @@
         .center-block
           = current_sale.sitewide_message
           '
-          = link_to 'Shop now!', dresses_path, class: 'text-highlight',  style: 'color:white;text-decoration:underline'
-
+          / = link_to 'Shop now!', dresses_path, class: 'text-highlight',  style: 'color:white;text-decoration:underline'
+          = link_to 'Shop now!', mystyle_landing_page_path(lpi: 'none', sale: 'all'), class: 'text-highlight',  style: 'color:white;text-decoration:underline'
 
   / TODO - Refactor how we apply email reminders
   - if Features.active?(:send_promotion_email_reminder)
