[feat] add link to breadcrumbs
I add links to breadcrumkbs on homepage

--- a/app/views/products/collections/_filters_sort.html.slim
+++ b/app/views/products/collections/_filters_sort.html.slim
@@ -6,11 +6,13 @@
     .row-fluid
       .col-md-3.col-xs-4
         .left-path.hidden-xs.hidden-sm
-          span
-            | Home /
-          span style="margin-left:5px"
-            b
-              | Dresses
+          = link_to root_path
+            span
+              | Home /
+          = link_to dresses_path
+            span style="margin-left:5px"
+              b
+                | Dresses
         .left-path.visible-xs.visible-sm#filter-mobile
           span
             i.fa.fa-filter
