--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -105,7 +105,7 @@ ruby:
         a#close
           = image_tag('Hamburger_white.png', height: '25px')
       .main-menu
-        div#new-this-week-menu
+        div#new-this-week-menu.menu-new-this-week
           ul.nav.navbar-nav
             li.normal-item
               .text.text-back NEW THIS WEEK
