--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -5,6 +5,7 @@ $pink-bg: #eeddf0;
 
 // Brand Colors
 $c-brand-blue: #003647;
+$c-brand-red: #e31313;
 
 // Neutral Colors
 $c-neutral-white: #fff;
@@ -12,6 +13,7 @@ $c-neutral-2: #F5F5F5;
 $c-neutral-4: #d7d7d7;
 $c-neutral-5: #e4e4e4;
 $c-neutral-10: #666;
+$c-neutral-12: #333;
 $c-neutral-black: #000;
 
 $slides-bg: #ececf4;
