--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -125,11 +125,9 @@ ruby:
             li.grey-item
               .text SHOP BY
             li.normal-item
-              = link_to dresses_path
-                .text View all dresses
+              = link_to "View all dresses", dresses_path, class: 'text'
             li.normal-item
-              a href='#'
-                .text What's new
+              = link_to "What's new", dresses_path(:order => 'newest'), class: 'text'
             li.normal-item
               = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'text'
             li.grey-item
