Wordsmithing, View More > Read More

--- a/app/views/shared/redesign/_blog_posts.html.slim
+++ b/app/views/shared/redesign/_blog_posts.html.slim
@@ -77,4 +77,4 @@
           h5.title.txt-truncate-1 5 On-Trend Dresses You'll Need For The Wedding Season Ahead
           p.txt-truncate-block Because sometimes it's okay to outshine the bride
 
-  a.btn.btn-block.btn-black.btn-md href='http://blog.fameandpartners.com' VIEW MORE...
+  a.btn.btn-block.btn-black.btn-md href='http://blog.fameandpartners.com' READ MORE...
