--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -87,8 +87,9 @@ ruby:
         = link_to 'View all dresses', dresses_path , class: 'no-style-text'
       div
         = link_to "What's new", dresses_path(:order => 'newest'), class: 'no-style-text'
-      div
-        = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
+      - unless Features.active?(:getitquick_unavailable)
+        div
+          = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
     .col2
       div.head STYLE
       = render partial: 'layouts/redesign/style'
