--- a/app/views/spree/admin/product_making_options/index.html.slim
+++ b/app/views/spree/admin/product_making_options/index.html.slim
@@ -29,6 +29,7 @@
         th
         th Name
         th Price
+        th Active
         th Tools
 
     tbody
@@ -38,5 +39,7 @@
             span.handle 
           td = making_option.name
           td = making_option.display_price
+          td = making_option.active?
           td
-            = link_to 'Delete', admin_product_making_option_path(@product, making_option), remote: true, method: 'delete'
+            - if making_option.active?
+              = link_to 'Deactivate', admin_product_making_option_path(@product, making_option), remote: true, method: 'delete'
