--- a/app/assets/stylesheets/redesign/components/_tabs.scss
+++ b/app/assets/stylesheets/redesign/components/_tabs.scss
@@ -18,47 +18,55 @@
       z-index: 2;
 
       li {
-        display: table;
+        position: relative;
+        display: block;
         width: 100%;
+        height: $tab-nav-height;
+        border-bottom: solid $c-neutral-5 1px;
 
-
-        &:first-child a {
+        &:first-child {
           border-top: solid $c-neutral-5 1px;
         }
 
       }
 
+      .inner-wrap {
+        display: table;
+        width: 100%;
+        height: 100%;
+      }
+
       a {
         display: table-cell;
         width: 100%;
-        height: $tab-nav-height;
+        height: 100%;
         padding: 0 30px;
         vertical-align: middle;
         font-size: 0.750em;
         text-transform: uppercase;
         color: $c-neutral-black;
-        border-bottom: solid $c-neutral-5 1px;
+        border-collapse: collapse;
       }
 
       li.active {
-        position: relative;
-        
-        a {
-          background: $c-brand-blue;
-          color: $c-neutral-white;
-        }
+        background: $c-brand-blue;
+        border-color: $c-brand-blue;
 
         &:after {
           content: '';
           display: block;
           position: absolute;
           top: 0;
-          right: -($tab-nav-height / 5);
+          left: 100%;
           width: 0;
           height: 0;
           border-style: solid;
           border-width: ($tab-nav-height / 2) 0 ($tab-nav-height / 2) ($tab-nav-height / 5);
           border-color: transparent transparent transparent $c-brand-blue;
+        }
+        
+        a {
+          color: $c-neutral-white;
         }
 
       }
