Increase limit on sale pages

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -62,7 +62,7 @@ ruby:
   span.magazine
     a href='http://blog.fameandpartners.com' MAGAZINE
   span.sale
-    = link_to 'SALE', mystyle_landing_page_path(:lpi => 'none', :sale => 'all')
+    = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
   /span.made-for-you MADE FOR YOU
   /span.join-us JOIN US
   span.search-wrapper#search
