--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -260,7 +260,7 @@ ruby:
             a.text href='http://blog.fameandpartners.com' MAGAZINE
           - if sale_active?
             li.normal-item
-              = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all'), class: 'text'
+              = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99), class: 'text'
 
           /li.normal-item
             /.text MADE FOR YOU
