Rename blog and event link texts

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -249,7 +249,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#event-menu-open
-            .text EVENTS
+            .text SHOP BY EVENTS
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#lookbook-menu-open
@@ -257,7 +257,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item
-            a.text href='http://blog.fameandpartners.com' MAGAZINE
+            a.text href='http://blog.fameandpartners.com' BLOG
           - if sale_active?
             li.normal-item
               = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99), class: 'text'
