--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -54,15 +54,16 @@ ruby:
   span.dresses
     = link_to 'DRESSES', dresses_path
   span.nested
-    ' EVENTS
+    ' SHOP BY EVENTS
     ul
       = render partial: 'layouts/redesign/event'
 
   span.lookbook LOOKBOOK
   span.magazine
-    a href='http://blog.fameandpartners.com' MAGAZINE
-  span.sale
-    = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
+    a href='http://blog.fameandpartners.com' BLOG
+  - if sale_active?
+    span.sale
+      = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
   /span.made-for-you MADE FOR YOU
   /span.join-us JOIN US
   span.search-wrapper#search
