Guard against nil on returns admin

--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -37,7 +37,8 @@
     h3 Order
     = link_to @item_return.order_number, spree.admin_order_path(id: @item_return.order_number)
     = render :partial => 'payment_info'
-    = render :partial => 'order_return_request'
+    - if @item_return.return_request.present?
+      = render :partial => 'order_return_request'
 
 
 
