--- a/engines/admin_ui/app/views/admin_ui/item_returns/events/_rejection.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/events/_rejection.html.slim
@@ -2,6 +2,6 @@
   = hidden_field_tag :event_type, event_type
   .form-group
     = f.label :comment, class: 'control-label'
-    = f.text_field :comment, class: 'form-control'
+    = f.text_field :comment, class: 'form-control required', required: true
   .form-group
     = f.button 'Submit'
