--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -54,7 +54,7 @@ ruby:
   span.dresses
     = link_to 'DRESSES', dresses_path
   span.nested
-    ' SHOP BY EVENTS
+    ' SHOP BY EVENT
     ul
       = render partial: 'layouts/redesign/event'
 
