--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -249,7 +249,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#event-menu-open
-            .text SHOP BY EVENTS
+            .text SHOP BY EVENT
             .arrow
               i.fa.fa-chevron-right
           li.normal-item#lookbook-menu-open
