--- a/app/views/hacky_messages/getitquick_unavailable.html.slim
+++ b/app/views/hacky_messages/getitquick_unavailable.html.slim
@@ -1,15 +1,11 @@
-.page-title.default.category-header style="background-image: url('#{@collection.details.banner.image}')"
+.page-title.default.category-header.dark-bg style="background-image: url('#{@collection.details.banner.image}')"
   .container
     .page-title--details
-      /h1.no-padding-bottom = @collection.details.banner.title
-      /p= raw @collection.details.banner.subtitle
-      h1.no-padding-bottom Oh Snap!
-      /p We can't do express making right now
+      h1.no-padding-bottom Oh snap!
+      p Sorry #famebabes, we will be unable to provide our express-making service from the <strong>1<sup>st</sup></strong> to the <strong>7<sup>th</sup></strong> October.
 
 .text-center
-  h2 We can't do express making right now!
-  p
-    ' In the meantime, check out
-    = link_to "what's new this week.", dresses_path(:order => 'newest')
-  p
-    = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
+    p.forum
+    p But totally still place your order and we&#39;ll send it your way from the 8<sup>th</sup>.
+    p In the meantime&hellip;
+    p = link_to "Shop new this week", dresses_path(:order => 'newest'), class: 'btn btn-black'
