[feat] modify widget nav page
I modify widget nav page

--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -41,3 +41,152 @@
   margin-top: 5px;
   margin-right: 35px;
 }
+
+
+
+@mixin mobile-header {
+  @media (max-width: #{$mobile-header - 1px}) {
+    @content;
+  }
+}
+
+
+
+/* [Header]
+-------------------------------------------------------*/
+#top {
+  $logo-width: 325px;
+
+  .banner-wrap {
+    width: 100%;
+    padding: 25px 0;
+
+    .inner-wrap {
+      position: relative;
+      padding: 0 ($mobile-header - $logo-width) / 2;
+    }
+
+    .left-wrap,
+    .right-wrap {
+      $mobile-header: 992px;
+      position: absolute;
+      max-width: ($mobile-header - $logo-width) / 2;
+    }
+
+    .left-wrap {
+      left: 0;
+      top: 15px;
+    }
+
+    .right-wrap {
+      right: 0;
+      top: 5px;
+    }
+
+    @include mobile-header {
+
+      & {
+        display: none;
+        visibility: hidden;
+      }
+
+    }
+
+  }
+
+  .logo-wrap {
+    position: relative;
+    display: block;
+    width: $logo-width;
+    height: 50px;
+    margin: 0 auto;
+
+    .logo{
+
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+
+    }
+
+    .tagline {
+      width: 100%;
+      margin-top: 10px;
+      text-align: center;
+      text-transform: uppercase;
+      font-family: Forum;
+      font-size: 1em;
+      color: $c-neutral-black;
+    }
+
+  }
+
+  .toolbar-moodboard-bag {
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    li {
+      display: block;
+      float: left;
+      height: 40px;
+      margin: 0 0 0 15px;
+      padding: 0;
+      line-height: 40px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &.separator {
+        width: 1px;
+        height: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        background: $c-neutral-10;
+      }
+
+    }
+
+    a {
+      float: left;
+      display: block;
+      color: $c-neutral-black;
+
+      &:hover,
+      &:focus {
+        color: $c-neutral-10;
+      }
+
+      .copy,
+      .icon {
+        float: left;
+        display: block;
+        height: 40px;
+        line-height: 40px;
+        vertical-align: middle;
+      }
+
+      .copy {
+        font-size: 15px;
+        margin-right: 5px;
+      }
+
+      .icon {
+        font-size: 17px;
+
+        &:after {
+          line-height: 40px;
+        }
+
+      }
+
+    }
+
+  }
+
+}
+
