hero carousel for homepage

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -64,6 +64,7 @@
 // Components
 @import 'redesign/components/tabs';
 @import 'redesign/components/media';
+@import 'redesign/components/hero';
 @import 'redesign/components/blog-posts';
 @import 'redesign/components/email-subscription';
 @import 'redesign/components/seo-content';
