--- a/app/views/marketing_mailer/wishlist_item_added_reminder.html.slim
+++ b/app/views/marketing_mailer/wishlist_item_added_reminder.html.slim
@@ -78,7 +78,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                     p style="margin: 10px 0; padding: 0; font: 400 11px/1.1 Times New Roman, sans-serif;"
                       = link_to dress.name, dress_url, style: "color:#333; text-decoration: none;"
                     p style="margin: 0; padding: 0; font: 400 18px/1.1 Times New Roman, sans-serif;"
-                      = dress.zone_price_for(@site_version).display_price
+                      = dress.site_price_for(@site_version).display_price
                     p style="margin: 20px 0 0; padding: 0;"
                       = link_to 'SHOP NOW', dress_url, style: "display: block; background: #000; border: solid 1px #000; color: #fff; text-decoration: none; margin: 5px 0; padding: 8px 0; text-transform: uppercase; font: 400 14px/1 Arial, sans-serif;"
                       = link_to 'CUSTOMIZE NOW', dress_url, style: "display: block; background: #fff; border: solid 1px #000; color: #000; text-decoration: none; margin: 5px 0; padding: 8px 0; text-transform: uppercase; font: 400 14px/1 Arial, sans-serif;"
