change ui for widget header

--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -52,6 +52,9 @@
 
 
 
+body{
+  font-family: "brandon-grotesque", sans-serif;
+}
 /* [Header]
 -------------------------------------------------------*/
 #top {
@@ -117,7 +120,7 @@
       text-align: center;
       text-transform: uppercase;
       font-family: Forum;
-      font-size: 1em;
+      font-size: 0.7em;
       color: $c-neutral-black;
     }
 
@@ -186,6 +189,414 @@
 
     }
 
+  }
+
+}
+
+
+
+
+
+
+#home-menu{
+    .new-this-week a:hover{
+      color:white;
+    }
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    border-color: #d7d7d7;
+    border-width: 1px;
+    border-style: solid;
+    background-color: white;
+    border-left: 0;
+    border-right: 0;
+    font-weight: 700;
+
+    span{
+      display: inline-block;
+      height: 30px;
+      margin-top: -1px;
+      margin-bottom: -2px;
+      padding: 0 15px;
+      line-height: 30px;
+      font-size: 1.2rem;
+      color: #000;
+      cursor: pointer;
+      position: relative;
+
+      em {
+        font-size: 1.4rem;
+        font-style: italic;
+        text-transform: none;
+        font-weight: 500;
+      }
+
+    }
+
+    span:hover:not(.search-wrapper) {
+
+      &,
+      & > a {
+        background-color: #003647;
+        color: white;
+      }
+
+    }
+    span:last-child:hover{
+      background-color: transparent;
+    }
+    #search{
+      .nav-mobile-logo{
+        height: 15px;
+      }
+    }
+
+    .nested {
+      position: relative;
+
+      ul {
+        position: absolute;
+        left: 0;
+        top: 29px;
+        width: 400px;
+        margin: 0;
+        padding: 30px;
+        display: none;
+        list-style: none;
+        text-align: left;
+        margin-top: -1px;
+        border: solid $c-neutral-10 1px;
+        border-top-color: $c-neutral-4;
+        background-color: #f5f5f5;
+
+        li {
+          float: left;
+          width: 50%;
+          padding-right: 30px;
+
+          a {
+            text-transform: capitalize;
+            font-weight: 400;
+            font-size: 1.6rem;
+            color: #333;
+            background: transparent;
+
+            &:hover {
+              color: #355e6d;
+            }
+
+          }
+
+        }
+
+      }
+
+      &:hover {
+
+        ul {
+          display: block;
+        }
+
+      }
+
+    }
+
+  }
+
+  .search-wrapper {
+    $search-input-height: 44px;
+    position: relative;
+
+    .search-input {
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 0;
+      right: 0;
+      background-color: #fff;
+      border: solid #d7d7d7 1px;
+      border-top-color: transparent;
+      @include transition(all 0.3s linear);
+
+      input {
+        display: block;
+        width: 100%;
+        height: 29px;
+        padding: 0 $search-input-height 0 10px;
+        line-height: 29px;
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #999;
+        border: none;
+        opacity: 0;
+        @include transition(opacity 0.15s linear);
+        @include transition-delay(0.4s);
+
+        &:focus{
+          outline: 0;
+        }
+
+      }
+
+    }
+
+    .icon-search {
+      position: relative;
+      z-index: 1;
+    }
+
+    &.active {
+
+      .search-input {
+        width: 410px;
+        height: $search-input-height;
+
+        input {
+          opacity: 1;
+        }
+
+      }
+
+    }
+
+  }
+
+  .prev{
+    top: 55%;
+    position: absolute;
+    background-image: url('icon-arrow-left.png');
+    opacity: 1;
+    background-size: contain;
+    z-index: 2;
+    text-indent: -9999px;
+  }
+  .next{
+    right: 0;
+    top: 55%;
+    position: absolute;
+    background-image: url('icon-arrow-right.png');
+    opacity: 1;
+    background-size: contain;
+    z-index: 2;
+    text-indent: -9999px;
+  }
+
+  #rect-dresses{
+    padding-bottom: 30px;
+    background-color: #f5f5f5;
+    .left-area{
+      .no-style-text{
+        color: black;
+        text-decoration: none;
+      }
+      padding-right: 10px;
+      width: 70%;
+      float: left;
+      height: 100%;
+      .col1 , .col2 , .col3 , .col4 {
+        width: 25%;
+        float: left;
+        padding-left: 30px;
+        .head{
+          margin-top: 30px;
+          font-weight :500;
+          font-size: 1.7rem;
+        }
+        div{
+          clear: both;
+          margin-top:10px;
+          font-size: 1.6rem;
+          text-transform: capitalize
+        }
+      }
+      .col2, .col3{
+        li{
+          padding-top: 10px;
+          a{
+            font-size: 1.6rem;
+            text-transform: capitalize;
+          }
+        }
+      }
+    }
+    .right-area{
+      width: 30%;
+      float: left;
+      height: 100%;
+      background-color: #003647;
+      .girl-image{
+        img{
+          width: 100%;
+        }
+      }
+
+      .girl-text{
+        position: relative;
+        width: 100%;
+        .contain{
+          padding: 20px;
+          color: white;
+          font-weight: 600;
+          text-align: center;
+          width: 100%;
+        }
+      }
+    }
+  }
+  #rect-lookbook{
+    background-color: transparent;
+    .lookbook-container{
+      .lookbook-slide{
+        padding-left: 0;
+      }
+      position: relative;
+      .prev, .next{
+        top:50%;
+      }
+      .rslides_tabs{
+        display: none;
+      }
+
+      .lookbook-item:nth-child(odd){
+        .head{
+          background-color: black;
+        }
+      }
+      .lookbook-item:nth-child(even){
+        .head{
+          background-color: #003647;
+        }
+      }
+      .lookbook-item{
+        width: 33.3%;
+        float: left;
+      }
+      .head{
+        width: 100.3%;
+        cursor: pointer;
+        text-align: center;
+        float: left;
+        background-color: black;
+        height: 80px;
+        font-size: 1.4rem;
+        display: table;
+        .text{
+          display: table-cell;
+          vertical-align: middle;
+          font-weight: 700;
+          color: white;
+        }
+      }
+      .image{
+        cursor: pointer;
+        width: 100%;
+        float: left;
+        clear: both;
+        img{
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  #rect-magazine{
+    @media(max-width: 1100px)
+    {
+      height: 370px;
+    }
+    @media(min-width: 1101px)and(max-width: 1400px)
+    {
+      height: 430px;
+    }
+    @media(min-width: 1401px)and(max-width: 1600px)
+    {
+      height: 470px;
+    }
+    @media(min-width: 1601px)and(max-width: 1800px)
+    {
+      height: 520px;
+    }
+    @media(min-width: 1801px)
+    {
+      height: 540px;
+    }
+    .left-col{
+      height: 100%;
+      background-color: #f5f5f5;
+      .head{
+        text-align: center;
+        font-weight: 500;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      };
+      .images{
+        div{
+          margin: 0;
+          padding: 0;
+          img{
+            width: 100%;
+          }
+        }
+        .text{
+          padding-top: 30px;
+          padding-bottom: 30px;
+          text-align: center;
+          font-weight: 400;
+        }
+      }
+    }
+    .right-col{
+      height: 100%;
+      background-color: #f6e2d5;
+      .head{
+        text-align: center;
+        font-weight: 500;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      }
+      .image{
+        img{
+          width: 100%;
+        }
+        .left-img{
+          padding-left: 30px;
+          padding-right: 15px;
+        }
+        .right-img{
+          padding-left: 15px;
+          padding-right: 30px;
+        }
+        .text{
+          padding-top: 30px;
+          padding-bottom: 30px;
+          text-align: center;
+        }
+      }
+    }
+
+  }
+
+.rect{
+  background-color: white;
+  width: 70%;
+  margin-left: 15%;
+  position: absolute;
+  z-index: 101;
+
+  visibility: hidden;
+  opacity: 0;
+  left: -9999em;
+
+  margin-top: -1px;
+  border: solid $c-neutral-10 1px;
+  border-top-color: $c-neutral-4;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+    left: auto;
   }
 
 }
