UI and styling for homepage product carousel

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -68,6 +68,7 @@
 @import 'redesign/components/blog-posts';
 @import 'redesign/components/email-subscription';
 @import 'redesign/components/seo-content';
+@import 'redesign/components/carousel-strap';
 
 // Generic
 @import 'redesign/generic/helpers';
