--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -14,108 +14,110 @@ doctype html
     = stylesheet_link_tag 'widgets/site_navigations'
     = csrf_meta_tags
 
-  body#top
-    .banner-wrap
-      .inner-wrap
-        = link_to root_path, class: 'logo-wrap' do
-          .logo
-            = image_tag 'logo/new-logo.svg'
-            .tagline Bespoke Fashion. Premium Style. Made for You.
+  body
+    #top
+      .banner-wrap
+        .inner-wrap
+          = link_to root_path, class: 'logo-wrap' do
+            .logo
+              = image_tag 'logo/new-logo.svg'
+              .tagline Bespoke Fashion. Premium Style. Made for You.
 
-    .row#home-menu.hidden-xs.hidden-sm.text-center
-      span.new-this-week
-        em
-          = link_to 'New this week', dresses_path(:order => 'newest')
-      span.dresses
-        = link_to 'DRESSES', dresses_path
-      span.nested
-        ' SHOP BY EVENTS
-        ul
-          = render partial: 'layouts/redesign/event'
+      .row#home-menu.hidden-xs.hidden-sm.text-center
+        span.new-this-week
+          em
+            = link_to 'New this week', dresses_path(:order => 'newest')
+        span.dresses
+          = link_to 'DRESSES', dresses_path
+        span.nested
+          ' SHOP BY EVENTS
+          ul
+            = render partial: 'layouts/redesign/event'
 
-      span.lookbook LOOKBOOK
-      span.magazine
-        a href='http://blog.fameandpartners.com' BLOG
-      - if sale_active?
-        span.sale
-          = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
-      /span.made-for-you MADE FOR YOU
-      /span.join-us JOIN US
-      span.search-wrapper#search
-        a.icon-search.js-search-trigger href="#"
-          = image_tag "_icons/search.svg", class: "nav-mobile-logo"
-        .search-input#search-area
-          = form_tag search_path, method: :get, id: 'searchForm'
-            input type="text" id="searchValue" placeholder="SEARCH FOR..." name="q"
+        span.lookbook LOOKBOOK
+        span.magazine
+          a href='http://blog.fameandpartners.com' BLOG
+        - if sale_active?
+          span.sale
+            = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99)
+        /span.made-for-you MADE FOR YOU
+        /span.join-us JOIN US
+        span.search-wrapper#search
+          a.icon-search.js-search-trigger href="#"
+            = image_tag "_icons/search.svg", class: "nav-mobile-logo"
+          .search-input#search-area
+            = form_tag search_path, method: :get, id: 'searchForm'
+              input type="text" id="searchValue" placeholder="SEARCH FOR..." name="q"
 
-    .row.rect#rect-dresses
-      .left-area
-        .col1
-          div.head SHOP BY
-          div
-            = link_to 'View all dresses', dresses_path , class: 'no-style-text'
-          div
-            = link_to "What's new", dresses_path(:order => 'newest'), class: 'no-style-text'
-          div
-            = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
-        .col2
-          div.head STYLE
-          = render partial: 'layouts/redesign/style'
-        .col3
-          div.head COLOUR
-          = render partial: 'layouts/redesign/color'
-        /.col4
-          /div.head SEPARATES
-          /div Outerwear
-      = link_to mystyle_landing_page_path(:lpi => 'none', :pids => ['640-forrest-green','643-black','648-black','656-black','649-black','640-black'],:limit => 0), class: 'right-area'
-        div.girl-image
-          = image_tag "homepage/dress-girl.jpg"
-        div.girl-text
-          .contain
-            div BAMBI X FAME.
-            div SHOP BAMBI'S PICKS
+      .row.rect#rect-dresses
+        .left-area
+          .col1
+            div.head SHOP BY
+            div
+              = link_to 'View all dresses', dresses_path , class: 'no-style-text'
+            div
+              = link_to "What's new", dresses_path(:order => 'newest'), class: 'no-style-text'
+            div
+              = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
+          .col2
+            div.head STYLE
+            = render partial: 'layouts/redesign/style'
+          .col3
+            div.head COLOUR
+            = render partial: 'layouts/redesign/color'
+          /.col4
+            /div.head SEPARATES
+            /div Outerwear
+        = link_to mystyle_landing_page_path(:lpi => 'none', :pids => ['640-forrest-green','643-black','648-black','656-black','649-black','640-black'],:limit => 0), class: 'right-area'
+          div.girl-image
+            = image_tag "homepage/dress-girl.jpg"
+          div.girl-text
+            .contain
+              div BAMBI X FAME.
+              div SHOP BAMBI'S PICKS
 
-    .row.rect#rect-lookbook
-      .lookbook-container
-        ul.lookbook-slide
-          li
-            = link_to make_a_statement_collection_path, class: "lookbook-item"
-              .head
-                .text BAMBI X FAME.
-              .image
-                = image_tag "homepage/lookbook/1.jpg"
-            = link_to luxe_collection_path, class: "lookbook-item"
-              .head
-                .text LUXE COLLECTION
-              .image
-                = image_tag "homepage/lookbook/2.jpg"
-            = link_to here_comes_the_sun_collection_path, class: "lookbook-item"
-              .head
-                .text HERE COMES THE SUN
-              .image
-                = image_tag "homepage/lookbook/3.jpg"
-    coffee:
-      $(document).ready ->
+      .row.rect#rect-lookbook
+        .lookbook-container
+          ul.lookbook-slide
+            li
+              = link_to make_a_statement_collection_path, class: "lookbook-item"
+                .head
+                  .text BAMBI X FAME.
+                .image
+                  = image_tag "homepage/lookbook/1.jpg"
+              = link_to luxe_collection_path, class: "lookbook-item"
+                .head
+                  .text LUXE COLLECTION
+                .image
+                  = image_tag "homepage/lookbook/2.jpg"
+              = link_to here_comes_the_sun_collection_path, class: "lookbook-item"
+                .head
+                  .text HERE COMES THE SUN
+                .image
+                  = image_tag "homepage/lookbook/3.jpg"
 
-        $("#search").on('click' , ->
-          $(this).addClass('active')
-        )
+coffee:
+  $(document).ready ->
 
-        $('.js-search-trigger').on('click' , (e)->
-          if $(this).parent().hasClass('active')
-            if $("#searchForm #searchValue").val() != ''
-              $("#searchForm").submit()
-            else
-              e.stopPropagation()
-              $("#search").removeClass('active')
-        )
+    $("#search").on('click' , ->
+      $(this).addClass('active')
+    )
 
-        $("#home-menu span[id!='search']").on('mouseenter', ->
-          $(".rect").removeClass('active');
-          $("#rect-"+this.className).addClass('active');
+    $('.js-search-trigger').on('click' , (e)->
+      if $(this).parent().hasClass('active')
+        if $("#searchForm #searchValue").val() != ''
+          $("#searchForm").submit()
+        else
+          e.stopPropagation()
           $("#search").removeClass('active')
-        )
+    )
 
-        $(".rect").on('mouseleave', ->
-          $(".rect").removeClass('active');
-        )
+    $("#home-menu span[id!='search']").on('mouseenter', ->
+      $(".rect").removeClass('active');
+      $("#rect-"+this.className).addClass('active');
+      $("#search").removeClass('active')
+    )
+
+    $(".rect").on('mouseleave', ->
+      $(".rect").removeClass('active');
+    )
