updated images, link copy and links for collection tabs and lookbook menu

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -116,14 +116,14 @@ ruby:
             .text BAMBI X FAME.
           .image
             = image_tag "homepage/lookbook/1.jpg"
-        = link_to luxe_collection_path, class: "lookbook-item"
+        = link_to photo_finish_collection_path, class: "lookbook-item"
           .head
-            .text LUXE COLLECTION
+            .text PHOTO FINISH
           .image
             = image_tag "homepage/lookbook/2.jpg"
-        = link_to here_comes_the_sun_collection_path, class: "lookbook-item"
+        = link_to luxe_collection_path, class: "lookbook-item"
           .head
-            .text HERE COMES THE SUN
+            .text THE LUXE COLLECTION
           .image
             = image_tag "homepage/lookbook/3.jpg"
 /!
