--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -197,16 +197,16 @@ ruby:
                       span bambi x fame.
                   .media-wrap
                     = image_tag 'homepage/lookbook/1.jpg'
+                = link_to photo_finish_collection_path
+                  .heading.alt
+                    .inner-wrap
+                      span photo finish
+                  .media-wrap
+                    = image_tag 'homepage/lookbook/2.jpg'
                 = link_to luxe_collection_path
                   .heading.alt
                     .inner-wrap
                       span the luxe collection
-                  .media-wrap
-                    = image_tag 'homepage/lookbook/2.jpg'
-                = link_to here_comes_the_sun_collection_path
-                  .heading.alt
-                    .inner-wrap
-                      span here comes the sun
                   .media-wrap
                     = image_tag 'homepage/lookbook/3.jpg'
 
