Simpler Returns index UI
- Collapsible filters panel
- Hide unused columns
- Line up filter labels

--- a/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
@@ -1,6 +1,11 @@
 - content_for :page_title do
   'Item Returns
 .ibox
+  .ibox-title
+    a.collapse-link
+      h5 Filter
+      .ibox-tools
+        i.fa.fa-chevron-up
   .ibox-content
     = datagrid_form_for @collection, :method => :get, url: item_returns_path
   .ibox-footer
